# nocturne

./: .gitignore  CHANGELOG.md  NOTICE  PIPELINE_SPEC.md  README.md  TODO.md  pyproject.toml
docs/: PIPELINE_AUDIT.md  announcement.md  specs.md
docs/audit/: PIPELINE_AUDIT.md
nocturne/: __init__.py  __main__.py  recipe.py  settings.py
nocturne/core/: annotate.py  autostretch.py  catalog.py  color.py  crop.py  curves.py  deconvolution.py  enhance.py  export.py  fits_io.py  hdr.py  histogram.py  image.py  instrument.py  levels.py  local_contrast.py  metrics.py  narrowband.py  noise.py  palette.py  saturation.py  spcc.py  star_reduction.py  star_spikes.py  starless.py  stretch.py
nocturne/data/: named_stars.csv  openngc.csv
nocturne/history/: project.py  step.py
nocturne/stacking/: frames.py  grade.py  haoiii.py  register.py  stacker.py
nocturne/steps/: color.py  curves.py  deconvolution_step.py  factory.py  green_fringe.py  load.py  local_contrast.py  narrowband_step.py  noise_sharpen.py  recover_core.py  remove_green_step.py  saturation_step.py  (+4 more)
packaging/: make_icons.py  nocturne.icns  nocturne.spec  nocturne_app.py
seestar_processor/: __main__.py  batch.py  recipe.py  settings.py
site/: README.md  config.example.php  contribute.js  get.php  index.html  lightbox.js  main.js  styles.css  upload.php
tests/: test_batch.py  test_brand_assets.py  test_contribute_page.py  test_export_header.py  test_fits_io_bayer.py  test_fits_io_normalize.py  test_recipe.py  test_resolve_binary.py  test_settings.py  test_settings_migration.py  test_site_links.py
(+288 files in other folders)
