[project]
name = "seestar-processor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "astropy>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "colour-demosaicing>=0.2.5",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
