[project]
name = "nocturne"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "PySide6>=6.6",
    "astropy>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "colour-demosaicing>=0.2.5",
    "tifffile>=2024.1",
    "Pillow>=10.0",
    "astroalign>=2.5",
    "sep>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # colour-demosaicing imports the deprecated scipy.ndimage.filters namespace.
    "ignore:Please import .* from the .scipy.ndimage. namespace:DeprecationWarning",
    # colour-science notes matplotlib is absent; we do not use its plotting API.
    "ignore:.*Matplotlib.* related API features are not available",
]
